CR-2002-01-17-1: Testsuite: - submit_job():
                 Enhancem.:     new error state -13 for unkown option error
                 Bugfix:    - fixed broken file_parsing test
                            - source of tcl files at startup of each test

CR-2002-01-17-0: Bugfix:    ERROR(()) call without string limitation "SFQ"
                            in execd caused segmentation fault when job
                            name length >  (ca.) 2K byte

EB-2002-01-17-0: Enhancem.: Improved logging of shadowd

AA-2002-01-17-0: Feature:   Security:
                            - cert scripts

JG-2002-01-16-0: Enhancem.: Execd can send load values for another host than
                            itself and qmaster will accept these load values.
                            Simulation mode to make qmaster not trash load
                            values for simulated hosts can be switched on
                            by qmaster_param simulate_hosts=1.
                            Performance improvement: Execd deliveres info
                            whether a variable is static or not.

CR-2002-01-16-1: Testsuite: - fixed broken migration test
                 Bugfix:    - fixed broken job_state_handling test
                            - new optional parameter for submit_job(): 
                                cd_dir: set working directory

EB-2002-01-15-0: Enhancem.: per user namespace for job dep. names

CR-2002-01-16-0: Testsuite: - faster lockfile check
                            - new settings file version: 5
                                (new foreign users/group setup)
                            - syntax check for testsuite users/group setup
                            - set_exechost(): ignore unchangable values
                            - submit_job(): new error states for access errors
                            - get_qstat_j_info(): joining lines, containing no ":"
                                 in order to get complete scheduling info