@@ -287,8 +287,13 @@ XtPointer closure  /* unused */
       XtWarning("locale not supported by Xlib, locale set to C");
       setlocale(LC_ALL, "C");
    }
+   else {
+      setlocale(LC_NUMERIC, "C");
+   }
+   
    if (! XSetLocaleModifiers(""))
       XtWarning("X locale modifiers not supported, using default");
+
    return setlocale(LC_ALL, NULL); /* re-query in case overwritten */
 }
 #endif 
@@ -314,11 +319,12 @@ Cardinal num_args
 
    DENTER(GUI_LAYER, "XmtInitialize");
 
-/*    XtSetLanguageProc(NULL, myXtDefaultLanguageProc, NULL); */
-/* #ifndef LINUX */
-/*    XtSetLanguageProc(NULL, NULL, NULL); */
-/* #endif    */
+#ifndef LINUX
+   setlocale(LC_NUMERIC, "C");
+   XtSetLanguageProc(NULL, NULL, NULL);
+#else
    XtSetLanguageProc(NULL, myXtDefaultLanguageProc, NULL);
+#endif   
 
    for (i=0; i<*argc_in_out; i++) {
       if (!strcmp(argv_in_out[i], "-cmap")) {
