@@ -154,6 +154,8 @@ XtPointer cld, cad;
    if (alp) {
       qmonMessageBox(w, alp, 0);
       alp = lFreeList(alp);
+      /* set busy cursor */
+      XmtDisplayDefaultCursor(w);
       DEXIT;
       return;
    }
