@@ -176,6 +176,8 @@ XtPointer cld, cad;
    if (alp) {
       qmonMessageBox(w, alp, 0);
       alp = lFreeList(alp);
+      /* set default cursor */
+      XmtDisplayDefaultCursor(w);
       DEXIT;
       return;
    }
