@@ -1,3 +1,6 @@
+AA-2002-01-17-1: Bugfix:   - qmonMirrorMultiAnswer
+                           - I18N in qmon
+
 CR-2002-01-17-1: Testsuite: - submit_job():
                  Enhancem.:     new error state -13 for unkown option error
                  Bugfix:    - fixed broken file_parsing test
